CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.20

	- The ppdEmit() functions did not use the correct
	  orientation value position for custom page sizes (STR
	  #292)


CHANGES IN CUPS V1.1.20rc2

	- The serial backend set the IXANY option on the port
	  for XON/XOFF flow control; this caused problems with
	  printers that returned status info but were not ready
	  for more print data (STR #287)
	- The scheduler didn't support scripted index files
	  (index.php, index.pl, etc. - STR #290)
	- The scheduler did not correctly localize script files
	  with "GET" variables (STR #268)
	- Changes in job classification are now logged (STR
	  #289)
	- Fixed a few more SLP-related bugs (STR #259)
	- Updated the user/group configure checks for MacOS X
	  10.3 (STR #270)
	- Fixed an offset bug in the PDF filter (STR #284)
	- The cupsDoRequest() and cupsDoFileRequest() functions
	  did not map several HTTP status codes to their IPP
	  counterparts. This made detecting certain conditions
	  very difficult (STR #277)
	- Config, spool, and status files are now owned by the
	  scheduler user (usually root) with read permission for
	  the filter group (STR #283)
	- The HP-GL/2 filter did not support the SI command,
	  some values for the AD and SD commands, and did not
	  rotate labels properly via the DI command (STR #282)
	- The fax support did not update/set the job-hold-until
	  attribute when a fax job fails (STR #269)
	- The cupsLangGet() function didn't support locales of
	  the form "ll.charset" (STR #271)
	- The scheduler did not use the charset when getting the
	  language localization for a request; this caused extra
	  disk IO for every request (STR #271)
	- The scheduler did not support requests with more than
	  one language specified (STR #267)


CHANGES IN CUPS V1.1.20rc1

	- The scheduler now waits up to 60 seconds before
	  restarting to allow active jobs to complete printing
	  and pending requests to be processed (STR #226)